Adding Dinic's algorithm with capacity scaling and numerical integration with adaptive simpson rule.

--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -73,6 +73,10 @@ Gut bei dünn besetzten Graphen.
 Gut bei sehr dicht besetzten Graphen.
 \lstinputlisting{graph/pushRelabel.cpp}
 
+\subsubsection{Dinic's Algorithm mit Capacity Scaling}
+Nochmal ca. Faktor 2 schneller als Ford Fulkerson mit Capacity Scaling.
+\lstinputlisting{graph/dinicScaling.cpp}
+
 \subsubsection{Anwendungen}
 \begin{itemize}[nosep]
 	\item \textbf{Maximum Edge Disjoint Paths}\newline
