--- a/math/math.tex
+++ b/math/math.tex
@@ -109,6 +109,9 @@ Multipliziert Polynome $A$ und $B$.
 \end{itemize}
 \lstinputlisting{math/fft.cpp}
 
+\subsection{Numerisch Integrieren, Simpsonregel}
+\lstinputlisting{math/simpson.cpp}
+
 \subsection{3D-Kugeln}
 \lstinputlisting{math/spheres.cpp}
 
