--- a/tcr.tex
+++ b/tcr.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
 % General information.
-\newcommand{\teamname}{breaKIT}
+\newcommand{\teamname}{Hello KITty}
 \newcommand{\university}{Karlsruhe Institute of Technology}
 
 % Font encoding.
