Adding code to count the number of inversions.

--- a/math/math.tex
+++ b/math/math.tex
@@ -120,6 +120,9 @@ Multipliziert Polynome $A$ und $B$.
 \subsection{Longest Increasing Subsequence}
 \lstinputlisting{math/longestIncreasingSubsequence.cpp}
 
+\subsection{Inversionszahl und Mergesort}
+\lstinputlisting{math/inversions.cpp}
+
 \subsection{Satz von \textsc{Sprague-Grundy}}
 Weise jedem Zustand $X$ wie folgt eine \textsc{Grundy}-Zahl $g\left(X\right)$ zu:
 \[
