Adding Hopcroft Karp Algorithm.

--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -102,6 +102,7 @@ Nochmal ca. Faktor 2 schneller als Ford Fulkerson mit Capacity Scaling.
 
 \subsection{Maximal Cardinatlity Bipartite Matching}\label{kuhn}
 \lstinputlisting{graph/maxCarBiMatch.cpp}
+\lstinputlisting{graph/hopcroftKarp.cpp}
 
 \subsection{2-SAT}
 \lstinputlisting{graph/2sat.cpp}
