reincluded bitonic tsp

--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -110,6 +110,6 @@ Nochmal ca. Faktor 2 schneller als Ford Fulkerson mit Capacity Scaling.
 % \subsection{TSP}
 % \lstinputlisting{graph/TSP.cpp}
 
-% \subsection{Bitonic TSP}
-% \lstinputlisting{graph/bitonicTSP.cpp}
+\subsection{Bitonic TSP}
+\lstinputlisting{graph/bitonicTSP.cpp}
 
