Taking big int code out of the document. Wastes space.

--- a/math/math.tex
+++ b/math/math.tex
@@ -566,5 +566,5 @@ Anzahl der Teilmengen von $\mathbb{N}$, die sich zu $n$ aufaddieren mit maximale
 	\bottomrule
 \end{tabular}
 
-\subsection{Big Integers}
-\lstinputlisting{math/bigint.cpp}
+% \subsection{Big Integers}
+% \lstinputlisting{math/bigint.cpp}
