Removing push relabel algorithm from document. Wastes space.

--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -65,9 +65,9 @@ VISIT(v):
 Gut bei dünn besetzten Graphen.
 \lstinputlisting{graph/capacityScaling.cpp}
 
-\subsubsection{Push Relabel}
-Gut bei sehr dicht besetzten Graphen.
-\lstinputlisting{graph/pushRelabel.cpp}
+% \subsubsection{Push Relabel}
+% Gut bei sehr dicht besetzten Graphen.
+% \lstinputlisting{graph/pushRelabel.cpp}
 
 \subsubsection{Dinic's Algorithm mit Capacity Scaling}
 Nochmal ca. Faktor 2 schneller als Ford Fulkerson mit Capacity Scaling.
