Removing code for fast input/fast output from doucment. Wastes space.

--- a/other/other.tex
+++ b/other/other.tex
@@ -6,8 +6,8 @@
 \subsection{Bit Operations}
 \lstinputlisting{other/bitOps.cpp}
 
-\subsection{Fast IO}
-\lstinputlisting{other/fastIO.cpp}
+% \subsection{Fast IO}
+% \lstinputlisting{other/fastIO.cpp}
 
 \subsection{Sonstiges}
 \begin{lstlisting}
