Adding decimal value of 2^31.

--- a/other/other.tex
+++ b/other/other.tex
@@ -163,7 +163,7 @@ $n$ Personen im Kreis, jeder $k$-te wird erschossen.
 		\item Integer Overflow? Teste maximale Eingabegrößen und mache Überschlagsrechnung.
 		\item Einabegrößen überprüfen. Sonderfälle ausprobieren.
 		\begin{itemize}
-			\item $n = 0$, $n = -1$, $n = 1$, $n = 2^{31}-1$, $n = -2^{31}$
+			\item $n = 0$, $n = -1$, $n = 1$, $n = 2^{31}-1$, $n = -2^{31} = 2147483648$
 			\item $n$ gerade/ungerade
 			\item Graph ist leer/enthält nur einen Knoten.
 			\item Liste ist leer/enthält nur ein Element.
