Not printing table of contents. Wastes space.

--- a/tcr.tex
+++ b/tcr.tex
@@ -23,10 +23,10 @@
 % Titlepage with table of contents.
 \maketitle
 \setlength{\columnsep}{1cm}
-\begin{multicols}{2}
-	\tableofcontents
-\end{multicols}
-\newpage
+% \begin{multicols}{2}
+% 	\tableofcontents
+% \end{multicols}
+% \newpage
 
 % Content.
 \begin{multicols*}{2}
