Adding code for the value of the maximum matching.

--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -100,6 +100,9 @@ Nochmal ca. Faktor 2 schneller als Ford Fulkerson mit Capacity Scaling.
 \lstinputlisting{graph/maxCarBiMatch.cpp}
 \lstinputlisting{graph/hopcroftKarp.cpp}
 
+\subsection{Wert des maximalen Matchings}
+\lstinputlisting{graph/matching.cpp}
+
 \subsection{2-SAT}
 \lstinputlisting{graph/2sat.cpp}
 
