Adding another formular to count the number of derangements.

--- a/math/math.tex
+++ b/math/math.tex
@@ -559,8 +559,10 @@ Anzahl der Teilmengen von $\mathbb{N}$, die sich zu $n$ aufaddieren mit maximale
 	\#Wälder mit $k$ gewurzelten Bäumen	&
 	$\frac{k}{n}\binom{n}{k}n^{n-k}$ \\
 
-	Dearangements &
+	Derangements &
 	$!n = (n - 1)(!(n - 1) + !(n - 2))$ \\
+	&
+	$!n = \left\lfloor\frac{n!}{e} + \frac{1}{2}\right\rfloor$ \\
 	&
 	$\lim\limits_{n \to \infty} \frac{!n}{n!} = \frac{1}{e}$ \\
 	\bottomrule
