Adding code for skew heaps.

--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -11,7 +11,6 @@ Dazu: Offset in den inneren Knoten des Baums speichern.
 \subsection{Fenwick Tree}
 \lstinputlisting{datastructures/fenwickTree.cpp}
 
-
 \subsection{Range Minimum Query}
 \lstinputlisting{datastructures/RMQ.cpp}
 
@@ -23,3 +22,6 @@ Dazu: Offset in den inneren Knoten des Baums speichern.
 
 \subsection{Treap (Cartesian Tree)}
 \lstinputlisting{datastructures/treap.cpp}
+
+\subsection{Skew Heap}
+\lstinputlisting{datastructures/skewHeap.cpp}
