Adding Niklas Fenwick Tree Code.

--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -10,6 +10,7 @@ Dazu: Offset in den inneren Knoten des Baums speichern.
 
 \subsection{Fenwick Tree}
 \lstinputlisting{datastructures/fenwickTree.cpp}
+\lstinputlisting{datastructures/fenwickTreeNiklas.cpp}
 
 \subsection{Range Minimum Query}
 \lstinputlisting{datastructures/RMQ.cpp}
