Adding short paragraph about polya counting.

--- a/other/other.tex
+++ b/other/other.tex
@@ -101,6 +101,15 @@ $n$ Personen im Kreis, jeder $k$-te wird erschossen.
 		[X/G] = \frac{1}{\vert G \vert} \sum_{g \in G} \vert X^g \vert
 	\]
 
+	\item \textbf{\textsc{Polya} Counting:}
+	Sei $\pi$ eine Permutation der Menge $X$.
+	Die Elemente von $X$ können mit einer von $m$ Farben gefärbt werden.
+	Die Anzahl der Färbungen, die Fixpunkte von $\pi$ sind, ist $m^{\#(\pi)}$, wobei $\#(\pi)$ die Anzahl der Zyklen von $\pi$ ist.
+	Die Anzahl der Färbungen von Objekten einer Menge $X$ mit $m$ Farben unter einer Symmetriegruppe $G$ is gegeben durch:
+	\[
+		[X/G] = \frac{1}{\vert G \vert} \sum_{g \in G} m^{\#(g)}
+	\]
+
 	\item \textbf{Verteilung von Primzahlen:}
 	Für alle $n \in \mathbb{N}$ gilt: Ex existiert eine Primzahl $p$ mit $n \leq p \leq 2n$.
 
