Removing text about MSTs, since it wastes space.

--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -1,15 +1,15 @@
 \section{Graphen}
 
-\subsection{Minimale Spannbäume}
+% \subsection{Minimale Spannbäume}
 
-\paragraph{Schnitteigenschaft}
-Für jeden Schnitt $C$ im Graphen gilt:
-Gibt es eine Kante $e$, die echt leichter ist als alle anderen Schnittkanten, so gehört diese zu allen minimalen Spannbäumen.
-($\Rightarrow$ Die leichteste Kante in einem Schnitt kann in einem minimalen Spannbaum verwendet werden.)
+% \paragraph{Schnitteigenschaft}
+% Für jeden Schnitt $C$ im Graphen gilt:
+% Gibt es eine Kante $e$, die echt leichter ist als alle anderen Schnittkanten, so gehört diese zu allen minimalen Spannbäumen.
+% ($\Rightarrow$ Die leichteste Kante in einem Schnitt kann in einem minimalen Spannbaum verwendet werden.)
 
-\paragraph{Kreiseigenschaft}
-Für jeden Kreis $K$ im Graphen gilt:
-Die schwerste Kante auf dem Kreis ist nicht Teil des minimalen Spannbaums.
+% \paragraph{Kreiseigenschaft}
+% Für jeden Kreis $K$ im Graphen gilt:
+% Die schwerste Kante auf dem Kreis ist nicht Teil des minimalen Spannbaums.
 
 \subsection{Kürzeste Wege}
 
