Changing few lines in Tipps/Tricks section and shortenig shortest paths section.

--- a/other/other.tex
+++ b/other/other.tex
@@ -180,10 +180,10 @@ $n$ Personen im Kreis, jeder $k$-te wird erschossen.
 \begin{itemize}
 	\item Run Tim Error:
 	\begin{itemize}
-		\item Stack Overflow? Evtl. rekurisve Tiefensuche auf langem Pfad?
 		\item Array-Grenzen überprüfen. Indizierung bei $0$ oder bei $1$ beginnen?
 		\item Abbruchbedingung bei Rekursion?
 		\item Evtl. Memory Limit Exceeded?
+		\item $n$ und $m$ verwechselt?
 	\end{itemize}
 
 	\item Gleitkommazahlen:
@@ -204,7 +204,6 @@ $n$ Personen im Kreis, jeder $k$-te wird erschossen.
 			\item $n = 0$, $n = -1$, $n = 1$, $n = 2^{31}-1$, $n = -2^{31} = 2147483648$
 			\item $n$ gerade/ungerade
 			\item Graph ist leer/enthält nur einen Knoten.
-			\item Liste ist leer/enthält nur ein Element.
 			\item Graph ist Multigraph (enthält Schleifen/Mehrfachkanten).
 			\item Sind Kanten gerichtet/ungerichtet?
 			\item Polygon ist konkav/selbstschneidend.
