Small spacing improvements in some maths table.

--- a/math/math.tex
+++ b/math/math.tex
@@ -158,7 +158,6 @@ Sei $p \geq 3$ eine Primzahl, $a \in \mathbb{Z}$:
 \end{align*}
 \lstinputlisting{math/legendre.cpp}
 
-
 \subsection{\textsc{Möbius}-Funktion und \textsc{Möbius}-Inversion}
 \begin{itemize}
 	\item Seien $f,g : \mathbb{N} \to \mathbb{N}$ und  $g(n) := \sum_{d \vert n}f(d)$.
@@ -547,7 +546,7 @@ Anzahl der Teilmengen von $\mathbb{N}$, die sich zu $n$ aufaddieren mit maximale
 	\#Regionen zwischen $n$ Gearden	&
 	$\frac{n\left(n + 1\right)}{2} + 1$ \\
 
-	\#abgeschlossene Regionen zwischen $n$ Geraden &
+	\#geschlossene Regionen zwischen $n$ Geraden &
 	$\frac{n^2 - 3n + 2}{2}$ \\
 
 	\#markierte, gewurzelte Bäume	&
