--- a/other/other.tex
+++ b/other/other.tex
@@ -9,6 +9,9 @@
 % \subsection{Fast IO}
 % \lstinputlisting{other/fastIO.cpp}
 
+\subsection{Rekursiver Abstieg und Abstrakter Syntaxbaum}
+\lstinputlisting{other/parser.cpp}
+
 \subsection{Sonstiges}
 \begin{lstlisting}
 // Alles-Header.
