Adding code for 2D segment tree.

--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -5,8 +5,9 @@
 
 \subsection{Segmentbaum}
 \lstinputlisting{datastructures/segmentTree.cpp}
-Mit \lstinline{update()} können ganze Intervalle geändert werden.
-Dazu: Offset in den inneren Knoten des Baums speichern.
+
+\subsection{2D-Segmentbaum}
+\lstinputlisting{datastructures/segmentTree2D.cpp}
 
 \subsection{Fenwick Tree}
 \lstinputlisting{datastructures/fenwickTree.cpp}
