Removing space around sections and subsections.

--- a/latexHeaders/layout.tex
+++ b/latexHeaders/layout.tex
@@ -18,7 +18,12 @@
 
 % Shift the title up to waste less space.
 \usepackage{titling}
-\setlength{\droptitle}{-8em}
+\setlength{\droptitle}{-9em}
+
+% Reduce spaces around sections and subsections.
+\usepackage{titlesec}
+\titlespacing*{\section}{0pt}{0pt}{0pt}
+\titlespacing*{\subsection}{0pt}{0pt}{0pt}
 
 % Nice enumerations without wasting space above and below.
 \usepackage{enumitem}
