Removing old lines form others section and moving others together.

--- a/other/other.tex
+++ b/other/other.tex
@@ -16,24 +16,16 @@
 \begin{lstlisting}
 // Alles-Header.
 #include <bits/stdc++.h>
-
-// Setzt das deutsche Tastaturlayout.
-setxkbmap de
-
 // Schnelle Ein-/Ausgabe mit cin/cout.
 ios::sync_with_stdio(false);
-
-// Set mit eigener Sortierfunktion. Typ muss nicht explizit angegeben werden.
+cin.tie(NULL);
+// Set mit eigener Sortierfunktion.
 set<point2, decltype(comp)> set1(comp);
-
 // PI
 #define PI (2*acos(0))
-
 // STL-Debugging, Compiler flags.
 -D_GLIBCXX_DEBUG
-#define _GLIBCXX_DEBUG
-
-// 128-Bit Integer/Float. Muss zum Einlesen/Ausgeben in einen int oder long long gecastet werden.
+// 128-Bit Integer/Float. Zum Einlesen/Ausgeben in long long casten.
 __int128, __float128
 \end{lstlisting}
 
