Changing layout to A4 paper.

--- a/latexHeaders/listings.tex
+++ b/latexHeaders/listings.tex
@@ -20,7 +20,7 @@
 	breakatwhitespace=false,
 	postbreak=\space,
 	tabsize=2,
-	basicstyle=\ttfamily\footnotesize,
+  basicstyle=\ttfamily\small,
 	showspaces=false,
 	showstringspaces=false,
 	extendedchars=true,
