--- a/tcr.tex
+++ b/tcr.tex
@@ -1,4 +1,4 @@
-\documentclass{article}
+\documentclass[a4paper,9pt]{scrartcl}
 
 % General information.
 \newcommand{\teamname}{Hello KITty}
@@ -9,7 +9,7 @@
 \usepackage[ngerman]{babel}
 \usepackage[utf8]{inputenc}
 
-% Include headers.
+% Include headers.  
 \input{latexHeaders/layout}
 \input{latexHeaders/math}
 \input{latexHeaders/listings}
