Adding code for max weight bipartite matching.

--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -101,6 +101,9 @@ Nochmal ca. Faktor 2 schneller als Ford Fulkerson mit Capacity Scaling.
 \lstinputlisting{graph/maxCarBiMatch.cpp}
 \lstinputlisting{graph/hopcroftKarp.cpp}
 
+\subsection{Maximum Weight Bipartite Matching}
+\lstinputlisting{graph/maxWeightBipartiteMatching.cpp}
+
 \subsection{Wert des maximalen Matchings}
 \lstinputlisting{graph/matching.cpp}
 
