Adding new code for sparse table implementation and LCA.

--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -13,8 +13,8 @@
 \lstinputlisting{datastructures/fenwickTree.cpp}
 \lstinputlisting{datastructures/fenwickTreeNiklas.cpp}
 
-\subsection{Range Minimum Query}
-\lstinputlisting{datastructures/RMQ.cpp}
+\subsection{Sparse Table}
+\lstinputlisting{datastructures/sparseTable.cpp}
 
 \subsection{STL-Tree}
 \lstinputlisting{datastructures/stlTree.cpp}
