--- a/graph/graph.tex
+++ b/graph/graph.tex
@@ -58,7 +58,7 @@ VISIT(v):
 \lstinputlisting{graph/euler.cpp}
 
 \subsection{Lowest Common Ancestor}
-\lstinputlisting{graph/LCA.cpp}
+\lstinputlisting{graph/lca.cpp}
 
 \subsection{Max-Flow}
 
