Adding dynamic variant of convex hull optimization.

--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -27,3 +27,8 @@
 
 \subsection{Skew Heap}
 \lstinputlisting{datastructures/skewHeap.cpp}
+
+\subsection{Lower/Upper Envelop (Convex Hull Optimization)}
+Um aus einem lower envelope einen upper envelope zu machen (oder umgekehrt), einfach beim Einfügen der Geraden $m$ und $b$ negieren.
+\lstinputlisting{datastructures/monotonicConvexHull.cpp}
+\lstinputlisting{datastructures/dynamicConvexHull.cpp}
