Remove Skew Heaps and add STL PQs

--- a/datastructures/datastructures.tex
+++ b/datastructures/datastructures.tex
@@ -25,8 +25,9 @@
 \subsection{Treap (Cartesian Tree)}
 \lstinputlisting{datastructures/treap.cpp}
 
-\subsection{Skew Heap}
-\lstinputlisting{datastructures/skewHeap.cpp}
+\subsection{STL Priority Queue}
+Nicht notwendig, wenn Smaller-Larger-Optimization greift.
+\lstinputlisting{datastructures/stlPQ.cpp}
 
 \subsection{Lower/Upper Envelop (Convex Hull Optimization)}
 Um aus einem lower envelope einen upper envelope zu machen (oder umgekehrt), einfach beim Einfügen der Geraden $m$ und $b$ negieren.
